--- a/lib/progress_tracker_web/components/layouts/app.html.heex
+++ b/lib/progress_tracker_web/components/layouts/app.html.heex
@@ -1,32 +1,40 @@
-<header class="px-4 sm:px-6 lg:px-8">
-  <div class="flex items-center justify-between border-b border-zinc-100 py-3 text-sm">
-    <div class="flex items-center gap-4">
-      <a href="/">
-        <img src={~p"/images/logo.svg"} width="36" />
-      </a>
-      <p class="bg-brand/5 text-brand rounded-full px-2 font-medium leading-6">
-        v<%= Application.spec(:phoenix, :vsn) %>
-      </p>
+<.flash_group flash={@flash} />
+
+<header class="px-8 py-2 h-16 flex justify-between items-center gap-8 bg-white shadow">
+  <.link navigate={"/"}>
+    <img src={~p"/images/logo.svg"} width="36" />
+  </.link>
+
+  <%= if @current_user do %>
+    <div class="h-8 flex items-center gap-4">
+      <div class="flex gap-2">
+        <div class="h-8 flex flex-col gap items-end font-medium">
+          logged user
+
+          <p class="flex text-xs">
+            Conectado via Discord
+          </p>
+        </div>
+
+        <img src={~p"/images/default-avatar.svg"} class="size-8 overflow-hidden rounded-full" />
+      </div>
+
+      <.link href={~p"/auth/revoke_access"} method="delete" title="Sair" class="hover:scale-110">
+        <.icon name="hero-arrow-right-start-on-rectangle text-support-error" />
+      </.link>
     </div>
-    <div class="flex items-center gap-4 font-semibold leading-6 text-zinc-900">
-      <a href="https://twitter.com/elixirphoenix" class="hover:text-zinc-700">
-        @elixirphoenix
-      </a>
-      <a href="https://github.com/phoenixframework/phoenix" class="hover:text-zinc-700">
-        GitHub
-      </a>
-      <a
-        href="https://hexdocs.pm/phoenix/overview.html"
-        class="rounded-lg bg-zinc-100 px-2 py-1 hover:bg-zinc-200/80"
-      >
-        Get Started <span aria-hidden="true">&rarr;</span>
-      </a>
-    </div>
-  </div>
+  <% else %>
+    <.link
+      navigate={~p"/auth"}
+      class="px-3 py-2 h-9 bg-orange-300 hover:bg-orange-500 text-sm hover:shadow-md font-semibold rounded"
+    >
+      Login com Mattermost
+    </.link>
+  <% end %>
 </header>
+
 <main class="px-4 py-20 sm:px-6 lg:px-8">
   <div class="mx-auto max-w-2xl">
-    <.flash_group flash={@flash} />
     <%= @inner_content %>
   </div>
 </main>
